--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
         <div class="map-container"></div>
 
+
+        <a href="https://github.com/chenjen/lab7.git">GitHub Repository</a>
         <!-- hot link to jQuery 2.0.3 -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
         
